# swg/swagger.yaml
@@ -60,6 +60,8 @@ definitions:
     type: object
   controller.pageItemvariantReq:
     properties:
+      itemId:
+        type: integer
       itemvariantDescription:
         type: string
       itemvariantName:
@@ -68,6 +70,8 @@ definitions:
         type: integer
       page:
         type: integer
+    required:
+    - itemId
     type: object
   controller.signinReq:
     properties:
@@ -175,66 +179,6 @@ paths:
       consumes:
       - application/json
       parameters:
-      - description: payload
-        in: body
-        name: req
-        required: true
-        schema:
-          $ref: '#/definitions/controller.pageItemReq'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            allOf:
-            - $ref: '#/definitions/response.Response'
-            - properties:
-                payload:
-                  $ref: '#/definitions/response.Pagination'
-              type: object
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/response.Response'
-      summary: Page Item
-      tags:
-      - Item
-  /item/{item_id}:
-    get:
-      consumes:
-      - application/json
-      parameters:
-      - default: 0
-        description: item_id
-        in: path
-        name: kanji
-        required: true
-        type: number
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            allOf:
-            - $ref: '#/definitions/response.Response'
-            - properties:
-                payload:
-                  $ref: '#/definitions/controller.itemRes'
-              type: object
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/response.Response'
-      summary: Get Item
-      tags:
-      - Item
-  /item/create:
-    post:
-      consumes:
-      - application/json
-      parameters:
       - description: Item Name
         in: formData
         name: itemName
@@ -274,7 +218,110 @@ paths:
       summary: Create Item
       tags:
       - Item
-  /itemvariant:
+  /item/{item_id}:
+    delete:
+      consumes:
+      - application/json
+      parameters:
+      - default: 0
+        description: item_id
+        in: path
+        name: kanji
+        required: true
+        type: number
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.Response'
+      summary: Delete Item
+      tags:
+      - Item
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - default: 0
+        description: item_id
+        in: path
+        name: kanji
+        required: true
+        type: number
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                payload:
+                  $ref: '#/definitions/controller.itemRes'
+              type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.Response'
+      summary: Get Item
+      tags:
+      - Item
+    put:
+      consumes:
+      - application/json
+      parameters:
+      - default: 0
+        description: item_id
+        in: path
+        name: kanji
+        required: true
+        type: number
+      - description: Item Name
+        in: formData
+        name: itemName
+        required: true
+        type: string
+      - description: Item Description
+        in: formData
+        name: itemDescription
+        required: true
+        type: string
+      - description: Active
+        in: formData
+        name: isActive
+        required: true
+        type: boolean
+      - description: Photo
+        in: formData
+        name: photo
+        required: true
+        type: file
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                payload:
+                  $ref: '#/definitions/controller.itemRes'
+              type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.Response'
+      summary: Update Item
+      tags:
+      - Item
+  /item/page:
     post:
       consumes:
       - application/json
@@ -284,7 +331,7 @@ paths:
         name: req
         required: true
         schema:
-          $ref: '#/definitions/controller.pageItemvariantReq'
+          $ref: '#/definitions/controller.pageItemReq'
       produces:
       - application/json
       responses:
@@ -301,40 +348,10 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/response.Response'
-      summary: Page Itemvariant
+      summary: Page Item
       tags:
-      - Itemvariant
-  /itemvariant/{itemvariant_id}:
-    get:
-      consumes:
-      - application/json
-      parameters:
-      - default: 0
-        description: itemvariant_id
-        in: path
-        name: kanji
-        required: true
-        type: number
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            allOf:
-            - $ref: '#/definitions/response.Response'
-            - properties:
-                payload:
-                  $ref: '#/definitions/controller.itemvariantRes'
-              type: object
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/response.Response'
-      summary: Get Itemvariant
-      tags:
-      - Itemvariant
-  /itemvariant/create:
+      - Item
+  /itemvariant:
     post:
       consumes:
       - application/json
@@ -381,6 +398,66 @@ paths:
           schema:
             $ref: '#/definitions/response.Response'
       summary: Create Itemvariant
+      tags:
+      - Itemvariant
+  /itemvariant/{itemvariant_id}:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - default: 0
+        description: itemvariant_id
+        in: path
+        name: kanji
+        required: true
+        type: number
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                payload:
+                  $ref: '#/definitions/controller.itemvariantRes'
+              type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.Response'
+      summary: Get Itemvariant
+      tags:
+      - Itemvariant
+  /itemvariant/page:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: payload
+        in: body
+        name: req
+        required: true
+        schema:
+          $ref: '#/definitions/controller.pageItemvariantReq'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                payload:
+                  $ref: '#/definitions/response.Pagination'
+              type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.Response'
+      summary: Page Itemvariant
       tags:
       - Itemvariant
   /sign-in:
